infra/k8s/overlays/dev/imagepullpolicy-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-api
spec:
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
